# DSS-Laboratorio-OWASP

./: .gitignore  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  docker-compose.yml  repo.txt  requirements.txt  sonar-project.properties
.github/workflows/: build.yml
Backend/controllers/: jwt.py
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/FileSection/jose@gmail.com/: repo.txt.ecc.hash.txt  repo.txt.ecc.sig  repo.txt.hash.txt  repo.txt.rsa.hash.txt  repo.txt.rsa.sig
backend/config/: __init__.py  deploy.yml  settings.py
backend/controllers/: FileServer.py  auth.py  keys.py
backend/database/: __init__.py  database.py  schemas.py
backend/models/: responses.py  user.py
backend/routes/: __init__.py  auth.py  file.py
backend/tests/: test_ratelimiter.py
backend/tests/integration/: test_auth.py  test_files.py  test_ratelimiter.py
backend/tests/unit/: test_auth.py  test_auth_controller.py  test_keys_controller.py
backend/utils/: logging_config.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/config/: deploy.yml  nginx.conf
frontend/src/: App.vue
frontend/src/api/: auth.js  files.js
frontend/src/components/: AllFiles.test.js  AllFiles.vue  FileDownload.test.js  FileDownload.vue  FileMetadata.test.js  FileMetadata.vue  FileUpload.test.js  FileUpload.vue  GenerateKeys.test.js  GenerateKeys.vue  VerifySignature.test.js  VerifySignature.vue  Welcome.test.js  Welcome.vue
frontend/src/pages/: Account.test.js  (+7 more)
(+1 files in other folders)
