[project]
name = "dss-lab-owasp-bck"
version = "0.1.0"
description = "A FastAPI project"
requires-python = ">=3.13"
dependencies = [
    "cryptography~=44.0.2",
    "fastapi[standard]~=0.115.8",
    "pydantic[email]~=2.10.6",
    "pyjwt~=2.10.1",
    "python-multipart~=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy~=2.0.38",
    "uvicorn~=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
